<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snap</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="empty_inbox_label">no new messages</string>
    <string name="empty_friends_label">Add friends to begin</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">UserName</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you entered username , password and email address!</string>
    <string name="signup_error_title">OOPs!</string>
    <string name="login_error_message">Please make sure you entered username and password!</string>
    <string name="login_error_title">OOPs!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Error!</string>
    <string name="error_message">something went wrong</string>
    <string name="error_external_storage">there was a problem accessing your device\'s external storage</string>
    <string name="action_camera">Camera</string>
    <string name="general_error">Oops!we\'re Sorry!</string>
    <string name="video_warning">The selected Video must be less than 10 MB !</string>
    <string name="file_error">There was a problem with the selected file !</string>
    <string name="file_warning">The selected file is too large! Select a new file </string>
    <string name="menu_send_label">Send</string>

    <string-array name="camera_choices">
        <item> Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients">Choose some friends first</string>
    <string name="sucees_message">Sent</string>
    <string name="file_sending_error">There was an Error sending your message, Please Try again</string>
    <string name="imageicon_label">image label</string>
    <string name="title_activity_view_image">Snap</string>
    <string name="image_view">image view</string>

</resources>
